bat.string1.lessons.bat.string1.FrontTimes.scala.error
frontTimes:6: error: identifier expected but integer literal found.
    s+=str[0]
           ^frontTimes:7: error: ']' expected but '}' found.
  }
  ^