bat.string1.lessons.bat.string1.FrontTimes.scala.code
def frontTimes(str:String, n:Int):String = 
{
  var s=""
  for(i <- 1 to n)
  {
    s+=str[0]
  }
  return s
}